Resolved #2594: Removed "Tags" column caption and re-aligned headers in QuikSearch

--- a/src/RentalWorksWeb/theme/rentalworks.css
+++ b/src/RentalWorksWeb/theme/rentalworks.css
@@ -388,7 +388,7 @@ Form tables
 #itemsearch #categorycolumns #subCategory ul {padding:5px 5px 5px 29px;}
 
 #itemsearch #itemlist {width:calc(100% - 230px);flex: 1 1 0;position:relative;overflow:auto;}
-#itemsearch #itemlist #inventory {width:calc(100% + 230px);position: absolute;top: 32px;left: 0;right: 0;bottom: 0;}
+#itemsearch #itemlist #inventory {width:calc(100% + 230px);position: absolute;top: 32px;left: 0;right: 0;bottom: 0;padding: 5px 20px 5px 5px;}
 
 #itemsearch #itemlist[data-view="GRID"] .columnDescriptions {display:none;}
 /*#itemsearch #itemlist[data-view="GRID"] {max-width:1950px;}*/
@@ -423,12 +423,12 @@ Form tables
 #itemsearch #itemlist[data-view="GRID"] .item-accessories {display:none;}
 
 #itemsearch #itemlist[data-view="LIST"] .columnDescriptions {width:calc(100% + 230px);display:flex;align-items:center;padding:5px 20px 5px 5px;background-color:#e0e0e0;color:#464646;border-bottom:1px solid #BDBDBD;font-weight:bold;}
-#itemsearch #itemlist[data-view="LIST"] .columnDescriptions .columnorder:last-of-type {padding-right:2em;} 
+/*#itemsearch #itemlist[data-view="LIST"] .columnDescriptions .columnorder:last-of-type {padding-right:2em;}*/ 
 #itemsearch #itemlist[data-view="LIST"] .item-info {display:flex;align-items:center;padding:5px;position:relative;border-bottom: 1px solid #BDBDBD;}
 #itemsearch #itemlist[data-view="LIST"] div[data-column="ItemImage"] {display:none;}
-#itemsearch #itemlist[data-view="LIST"] div[data-column="Description"] {flex:1 0 250px;margin:0 10px;user-select:text;}
+#itemsearch #itemlist[data-view="LIST"] div[data-column="Description"] {flex:1 0 250px;margin-right:10px;user-select:text;}
 #itemsearch #itemlist[data-view="LIST"] div[data-column="Description"] .descriptionrow {display:flex;align-items:center;}
-#itemsearch #itemlist[data-view="LIST"] div[data-column="Tags"] {flex:1 0 100px;margin:0 10px;}
+#itemsearch #itemlist[data-view="LIST"] div[data-column="Tags"] {flex:1 0 100px;margin-right:10px;}
 #itemsearch #itemlist[data-view="LIST"] div[data-column="Tags"] .tag {display:inline-block;border-radius: 4px;padding: 2px 4px;color: white;text-transform: lowercase;font-weight: 500;box-shadow: inset 0 -1px 0 rgba(27,31,35,.12);}
 #itemsearch #itemlist[data-view="LIST"] div[data-column="Tags"] .tag:not(:first-of-type) {margin-left: 4px;}
 #itemsearch #itemlist[data-view="LIST"] div[data-column="Quantity"] {flex:0 0 90px;margin-right:10px;position:relative;text-align:center;}
